@@ -29,19 +29,13 @@ jobs:
         addToPath: true
       displayName: setup python
     #
-    #- checkout: self
-    #  submodules: true
-    #
     - download: current
       artifact: ${{ format('sw_{0}_{1}', parameters.tox,  parameters.os) }}
-
-    - download: current
-      artifact: ${{ format('sw_u_{0}_{1}', parameters.tox,  parameters.os) }}
     #
     - script: ls -lR $(Pipeline.Workspace)/${{ format('sw_{0}_{1}', parameters.tox, parameters.os) }}
       displayName: "Listing of downloaded artifacts"
     #
-    - script: python -m pip install --upgrade pip twine setuptools wheel
+    - script: python -m pip install --upgrade pip twine wheel hatch
       displayName: 'Install packaging tools'
     #
     - task: DownloadSecureFile@1
@@ -49,13 +43,8 @@ jobs:
       displayName: 'Download PyPI credentials'
       inputs:
         secureFile: 'PYPIRC-AZURE'
-
-    - ${{ if startsWith(parameters.os, 'linux') }}:
-      - script: twine upload --verbose --skip-existing -r pypi  --config-file $(pypicred.secureFilePath) $(Pipeline.Workspace)/${{ format('sw_u_{0}_{1}', parameters.tox, parameters.os) }}/*
-        displayName: "Linux upload sdist and source wheel to PyPi ..."
-        continueOnError: true
     #
-    - ${{ if startsWith(parameters.os, 'macos') }}:
+    - ${{ if startsWith(parameters.os, 'linux') }}:
       - script: twine upload --verbose --skip-existing -r pypi  --config-file $(pypicred.secureFilePath) $(Pipeline.Workspace)/${{ format('sw_{0}_{1}', parameters.tox, parameters.os) }}/*
-        displayName: "Mac upload sdist and binary wheel to PyPi ..."
+        displayName: "Linux upload sdist and binary wheel to PyPi ..."
         continueOnError: true
