@@ -1,13 +1,17 @@
 [build-system]
-requires = ["setuptools>=61", "wheel"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [project]
 name = "rcsb.utils.io"
 description = "RCSB Python I/O Utility Classes"
+version = "1.53"
 readme = "README.md"
 authors = [
     { name="John Westbrook", email="john.westbrook@rcsb.org" }
+]
+maintainers = [
+    { name="Dennis Piehl", email="dennis.piehl@rcsb.org" }
 ]
 license = "Apache-2.0"
 license-files = ["LICENSE"]
@@ -26,8 +30,7 @@ dependencies = [
     "python-dateutil",
     "ruamel.yaml",
     "multiprocess",
-    "mmcif >= 0.72",
-    "rcsb.utils.validation >= 0.20",
+    "mmcif >= 1.0.0",
     "PyNaCl >= 1.3.0",
     "requests >= 2.25",
     "paramiko >=2.7.2",
@@ -35,23 +38,47 @@ dependencies = [
     "GitPython >= 3.1.18",
     "urllib3 >= 1.26.15",
 ]
-dynamic = ["version"]
 
 [project.optional-dependencies]
-dev = ["check-manifest"]
 tests = ["tox", "pylint", "black>=21.5b1", "flake8", "coverage"]
 
 [project.urls]
 Homepage = "https://github.com/rcsb/py-rcsb_utils_io"
 
-[tool.setuptools.packages.find]
-include = ["rcsb*"]  # must leave at "rcsb*" and not "rcsb.*", else the 'rcsb/__init__.py' file is dropped
-exclude = ["rcsb.utils.test*", "rcsb.mock-*", "test*"]
-namespaces = false
 
-[tool.setuptools.dynamic]
-version = {attr = "rcsb.utils.io.__version__"}
+# ----------------  hatch configuration ----------------
+[tool.hatch.build.targets.sdist]
+include = [
+    "/rcsb/**",
+    "/README.md",
+    "/LICENSE",
+    "/HISTORY.txt",
+    "/pyproject.toml",
+]
+exclude = [
+    "/rcsb/utils/test*/test*-*",
+    "/rcsb/mock-*",
+]
 
+[tool.hatch.build.targets.wheel]
+packages = ["rcsb"]
+exclude = [
+    "/rcsb/utils/test*",
+    "/rcsb/mock-*",
+]
+
+[tool.hatch.envs.default]
+skip-install = true
+
+
+# ----------------  test configuration ----------------
+[tool.hatch.envs.hatch-test]
+dependencies = ["tox"]
+
+[tool.hatch.envs.hatch-test.scripts]
+run = ["tox"]
+
+# ----------------  UV configuration ----------------
 # Add this to prevent uv from automatically creating venvs within individual packages when running 'uv run ...' from within the package directory
 [tool.uv]
 managed = false
