@@ -25,10 +25,11 @@ import time
 import unittest
 
 import multiprocess as multiprocessing
-
-from rcsb.utils.io import __version__
+from importlib.metadata import version as get_package_version
 from rcsb.utils.io.CryptUtils import CryptUtils
 from rcsb.utils.io.FileLock import FileLock, Timeout
+
+__version__ = get_package_version("rcsb.utils.io")
 
 HERE = os.path.abspath(os.path.dirname(__file__))
 TOPDIR = os.path.dirname(os.path.dirname(os.path.dirname(HERE)))
