@@ -23,8 +23,10 @@ import os
 import time
 import unittest
 
-from rcsb.utils.io import __version__
+from importlib.metadata import version as get_package_version
 from rcsb.utils.io.FileUtil import FileUtil
+
+__version__ = get_package_version("rcsb.utils.io")
 
 HERE = os.path.abspath(os.path.dirname(__file__))
 TOPDIR = os.path.dirname(os.path.dirname(os.path.dirname(HERE)))
