@@ -23,9 +23,11 @@ import unittest
 import logging
 
 #
-from rcsb.utils.io import __version__
+from importlib.metadata import version as get_package_version
 from rcsb.utils.io.FileUtil import FileUtil
 from rcsb.utils.io.GitUtil import GitUtil
+
+__version__ = get_package_version("rcsb.utils.io")
 
 
 HERE = os.path.abspath(os.path.dirname(__file__))
