@@ -24,8 +24,10 @@ import unittest
 import logging
 
 #
-from rcsb.utils.io import __version__
+from importlib.metadata import version as get_package_version
 from rcsb.utils.io.StashUtil import StashUtil
+
+__version__ = get_package_version("rcsb.utils.io")
 
 
 HERE = os.path.abspath(os.path.dirname(__file__))
