@@ -20,8 +20,10 @@ try:
 except ImportError:
     from urllib2 import quote
 
-from rcsb.utils.io import __version__
+from importlib.metadata import version as get_package_version
 from rcsb.utils.io.UrlRequestUtil import UrlRequestUtil
+
+__version__ = get_package_version("rcsb.utils.io")
 
 HERE = os.path.abspath(os.path.dirname(__file__))
 TOPDIR = os.path.dirname(os.path.dirname(os.path.dirname(HERE)))
